[UPDATE/FIX] Обновление страницы Каталог продуктов

--- a/app/scss/base/pngSprite.scss
+++ b/app/scss/base/pngSprite.scss
@@ -9,55 +9,33 @@
 //
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
-$icon-img-catalog-product-1-name: 'icon-img-catalog-product-1';
-$icon-img-catalog-product-1-x: 0px;
-$icon-img-catalog-product-1-y: 156px;
-$icon-img-catalog-product-1-offset-x: 0px;
-$icon-img-catalog-product-1-offset-y: -156px;
-$icon-img-catalog-product-1-width: 64px;
-$icon-img-catalog-product-1-height: 65px;
-$icon-img-catalog-product-1-total-width: 64px;
-$icon-img-catalog-product-1-total-height: 221px;
-$icon-img-catalog-product-1-image: '../images/sprite.png';
-$icon-img-catalog-product-1: (0px, 156px, 0px, -156px, 64px, 65px, 64px, 221px, '../images/sprite.png', 'icon-img-catalog-product-1', );
-$icon-img-catalog-product-2-name: 'icon-img-catalog-product-2';
-$icon-img-catalog-product-2-x: 0px;
-$icon-img-catalog-product-2-y: 102px;
-$icon-img-catalog-product-2-offset-x: 0px;
-$icon-img-catalog-product-2-offset-y: -102px;
-$icon-img-catalog-product-2-width: 63px;
-$icon-img-catalog-product-2-height: 54px;
-$icon-img-catalog-product-2-total-width: 64px;
-$icon-img-catalog-product-2-total-height: 221px;
-$icon-img-catalog-product-2-image: '../images/sprite.png';
-$icon-img-catalog-product-2: (0px, 102px, 0px, -102px, 63px, 54px, 64px, 221px, '../images/sprite.png', 'icon-img-catalog-product-2', );
-$icon-img-catalog-product-3-name: 'icon-img-catalog-product-3';
-$icon-img-catalog-product-3-x: 0px;
-$icon-img-catalog-product-3-y: 50px;
-$icon-img-catalog-product-3-offset-x: 0px;
-$icon-img-catalog-product-3-offset-y: -50px;
-$icon-img-catalog-product-3-width: 42px;
-$icon-img-catalog-product-3-height: 52px;
-$icon-img-catalog-product-3-total-width: 64px;
-$icon-img-catalog-product-3-total-height: 221px;
-$icon-img-catalog-product-3-image: '../images/sprite.png';
-$icon-img-catalog-product-3: (0px, 50px, 0px, -50px, 42px, 52px, 64px, 221px, '../images/sprite.png', 'icon-img-catalog-product-3', );
-$icon-img-catalog-product-4-name: 'icon-img-catalog-product-4';
-$icon-img-catalog-product-4-x: 0px;
-$icon-img-catalog-product-4-y: 0px;
-$icon-img-catalog-product-4-offset-x: 0px;
-$icon-img-catalog-product-4-offset-y: 0px;
-$icon-img-catalog-product-4-width: 51px;
-$icon-img-catalog-product-4-height: 50px;
-$icon-img-catalog-product-4-total-width: 64px;
-$icon-img-catalog-product-4-total-height: 221px;
-$icon-img-catalog-product-4-image: '../images/sprite.png';
-$icon-img-catalog-product-4: (0px, 0px, 0px, 0px, 51px, 50px, 64px, 221px, '../images/sprite.png', 'icon-img-catalog-product-4', );
-$spritesheet-width: 64px;
-$spritesheet-height: 221px;
+$icon-catalog-product-2-name: 'icon-catalog-product-2';
+$icon-catalog-product-2-x: 0px;
+$icon-catalog-product-2-y: 52px;
+$icon-catalog-product-2-offset-x: 0px;
+$icon-catalog-product-2-offset-y: -52px;
+$icon-catalog-product-2-width: 125px;
+$icon-catalog-product-2-height: 107px;
+$icon-catalog-product-2-total-width: 125px;
+$icon-catalog-product-2-total-height: 159px;
+$icon-catalog-product-2-image: '../images/sprite.png';
+$icon-catalog-product-2: (0px, 52px, 0px, -52px, 125px, 107px, 125px, 159px, '../images/sprite.png', 'icon-catalog-product-2', );
+$icon-catalog-product-3-name: 'icon-catalog-product-3';
+$icon-catalog-product-3-x: 0px;
+$icon-catalog-product-3-y: 0px;
+$icon-catalog-product-3-offset-x: 0px;
+$icon-catalog-product-3-offset-y: 0px;
+$icon-catalog-product-3-width: 42px;
+$icon-catalog-product-3-height: 52px;
+$icon-catalog-product-3-total-width: 125px;
+$icon-catalog-product-3-total-height: 159px;
+$icon-catalog-product-3-image: '../images/sprite.png';
+$icon-catalog-product-3: (0px, 0px, 0px, 0px, 42px, 52px, 125px, 159px, '../images/sprite.png', 'icon-catalog-product-3', );
+$spritesheet-width: 125px;
+$spritesheet-height: 159px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($icon-img-catalog-product-1, $icon-img-catalog-product-2, $icon-img-catalog-product-3, $icon-img-catalog-product-4, );
-$spritesheet: (64px, 221px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($icon-catalog-product-2, $icon-catalog-product-3, );
+$spritesheet: (125px, 159px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
