--- a/app/templates/pages/catalog-products.pug
+++ b/app/templates/pages/catalog-products.pug
@@ -15,19 +15,23 @@ block content
         .main-products-category
           a.main-products-category-el(href="#")
             .category-el-icon
-              +icon('img-catalog-product-1', 'png').icon-background
+              +icon('img-catalog-product-1', 'svg').icon-background
+              .icon-active-bg
             .category-el-title Адыгейские сыры
           a.main-products-category-el.active(href="#")
             .category-el-icon
-              +icon('img-catalog-product-2', 'png').icon-background
+              +icon('img-catalog-product-2', 'svg').icon-background
+              .icon-active-bg
             .category-el-title Вытяжные сыры
           a.main-products-category-el(href="#")
             .category-el-icon
-              +icon('img-catalog-product-3', 'png').icon-background
+              +icon('catalog-product-3', 'png').icon-background
+              .icon-active-bg
             .category-el-title Масло и спред
           a.main-products-category-el(href="#")
             .category-el-icon
-              +icon('img-catalog-product-4', 'png').icon-background
+              +icon('img-catalog-product-4', 'svg').icon-background
+              .icon-active-bg
             .category-el-title Сыворотка
             
         .main-products-items
