--- a/app/scss/base/svgSprite.scss
+++ b/app/scss/base/svgSprite.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     background-image: url("../images/sprite.svg");
     background-repeat: no-repeat;
-    background-size: 40.3em 263.8em;
+    background-size: 40.3em 282.3em;
 }
 
 .no-svg .svg-icon:before {
@@ -125,8 +125,35 @@
 
 
 
-  .svg-icon.svg-instagram:before {
+  .svg-icon.svg-img-catalog-product-1:before {
       background-position: 0em -63.2em;
+      width: 8em;
+      height: 8.1em;
+  }
+
+
+
+
+  .svg-icon.svg-img-catalog-product-2:before {
+      background-position: 0em -71.3em;
+      width: 6.3em;
+      height: 5.4em;
+  }
+
+
+
+
+  .svg-icon.svg-img-catalog-product-4:before {
+      background-position: 0em -76.7em;
+      width: 5.1em;
+      height: 5em;
+  }
+
+
+
+
+  .svg-icon.svg-instagram:before {
+      background-position: 0em -81.7em;
       width: 1.8em;
       height: 1.8em;
   }
@@ -135,7 +162,7 @@
 
 
   .svg-icon.svg-logotype:before {
-      background-position: 0em -65em;
+      background-position: 0em -83.5em;
       width: 15.1em;
       height: 9.6em;
   }
@@ -144,7 +171,7 @@
 
 
   .svg-icon.svg-logotype-short:before {
-      background-position: 0em -74.6em;
+      background-position: 0em -93.1em;
       width: 15.2em;
       height: 4.1em;
   }
@@ -153,7 +180,7 @@
 
 
   .svg-icon.svg-main-link-arrow:before {
-      background-position: 0em -78.7em;
+      background-position: 0em -97.2em;
       width: 1.3em;
       height: 0.8em;
   }
@@ -162,7 +189,7 @@
 
 
   .svg-icon.svg-main-link-plus:before {
-      background-position: 0em -79.5em;
+      background-position: 0em -98em;
       width: 1.2em;
       height: 1.2em;
   }
@@ -171,7 +198,7 @@
 
 
   .svg-icon.svg-navigation:before {
-      background-position: 0em -80.7em;
+      background-position: 0em -99.2em;
       width: 7.9em;
       height: 7.8em;
   }
@@ -180,7 +207,7 @@
 
 
   .svg-icon.svg-ok:before {
-      background-position: 0em -88.5em;
+      background-position: 0em -107em;
       width: 1.4em;
       height: 2.4em;
   }
@@ -189,7 +216,7 @@
 
 
   .svg-icon.svg-pack:before {
-      background-position: 0em -90.9em;
+      background-position: 0em -109.4em;
       width: 40.3em;
       height: 24.2em;
   }
@@ -198,7 +225,7 @@
 
 
   .svg-icon.svg-pan:before {
-      background-position: 0em -115.1em;
+      background-position: 0em -133.6em;
       width: 14.8em;
       height: 6.6em;
   }
@@ -207,7 +234,7 @@
 
 
   .svg-icon.svg-paste:before {
-      background-position: 0em -121.7em;
+      background-position: 0em -140.2em;
       width: 9.5em;
       height: 6.1em;
   }
@@ -216,7 +243,7 @@
 
 
   .svg-icon.svg-presentation:before {
-      background-position: 0em -127.8em;
+      background-position: 0em -146.3em;
       width: 7.8em;
       height: 9.8em;
   }
@@ -225,7 +252,7 @@
 
 
   .svg-icon.svg-prevslogo:before {
-      background-position: 0em -137.6em;
+      background-position: 0em -156.1em;
       width: 24.2em;
       height: 24.3em;
   }
@@ -234,7 +261,7 @@
 
 
   .svg-icon.svg-print-main:before {
-      background-position: 0em -161.9em;
+      background-position: 0em -180.4em;
       width: 16.1em;
       height: 16.1em;
   }
@@ -243,7 +270,7 @@
 
 
   .svg-icon.svg-print-product:before {
-      background-position: 0em -178em;
+      background-position: 0em -196.5em;
       width: 19.4em;
       height: 19.4em;
   }
@@ -252,7 +279,7 @@
 
 
   .svg-icon.svg-promo-box-top-text:before {
-      background-position: 0em -197.4em;
+      background-position: 0em -215.9em;
       width: 23.2em;
       height: 13.4em;
   }
@@ -261,7 +288,7 @@
 
 
   .svg-icon.svg-rhombus:before {
-      background-position: 0em -210.8em;
+      background-position: 0em -229.3em;
       width: 13.6em;
       height: 13.4em;
   }
@@ -270,7 +297,7 @@
 
 
   .svg-icon.svg-salad:before {
-      background-position: 0em -224.2em;
+      background-position: 0em -242.7em;
       width: 9.6em;
       height: 7.9em;
   }
@@ -279,7 +306,7 @@
 
 
   .svg-icon.svg-shawarma:before {
-      background-position: 0em -232.1em;
+      background-position: 0em -250.6em;
       width: 9.6em;
       height: 5.3em;
   }
@@ -288,7 +315,7 @@
 
 
   .svg-icon.svg-statistics:before {
-      background-position: 0em -237.4em;
+      background-position: 0em -255.9em;
       width: 10.3em;
       height: 7em;
   }
@@ -297,7 +324,7 @@
 
 
   .svg-icon.svg-timer:before {
-      background-position: 0em -244.4em;
+      background-position: 0em -262.9em;
       width: 3.3em;
       height: 3.3em;
   }
@@ -306,7 +333,7 @@
 
 
   .svg-icon.svg-twitter:before {
-      background-position: 0em -247.7em;
+      background-position: 0em -266.2em;
       width: 2em;
       height: 1.8em;
   }
@@ -315,7 +342,7 @@
 
 
   .svg-icon.svg-vk:before {
-      background-position: 0em -249.5em;
+      background-position: 0em -268em;
       width: 2.6em;
       height: 1.6em;
   }
@@ -324,7 +351,7 @@
 
 
   .svg-icon.svg-vote:before {
-      background-position: 0em -251.1em;
+      background-position: 0em -269.6em;
       width: 12.1em;
       height: 11em;
   }
@@ -333,7 +360,7 @@
 
 
   .svg-icon.svg-wikipedia:before {
-      background-position: 0em -262.1em;
+      background-position: 0em -280.6em;
       width: 2.8em;
       height: 1.7em;
   }
