--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -187,23 +187,32 @@ section {
         justify-content: center;
         padding: 9px;
         margin-bottom: 10px;
+        width: 90px;
+        height: 90px;
+        overflow: hidden;
 
         @include screen('sm', 'max') {
           padding: 4px;
+          width: 72px;
+          height: 72px;
+        }
+
+        @include screen('xs', 'max') {
+          padding: 4px;
+          width: 63px;
+          height: 63px;
         }
 
         .icon-background {
-          width: 72px;
-          height: 72px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          border-radius: 50px;
+          z-index: 10;
+          font-size: 10px;
+
+          @include screen('sm', 'max') {
+            font-size: 8px;
+          }
 
           @include screen('xs', 'max') {
-            width: 50px;
-            height: 50px;
-            font-size: 9px;
+            font-size: 6px;
           }
         }
       }
@@ -235,8 +244,22 @@ section {
         border: 1px dashed #EE7754;
       }
   
-      .icon-background {
+      .icon-active-bg {
+        width: 72px;
+        height: 72px;
         background: #EE7754;
+        position: absolute;
+        border-radius: 50px;
+
+        @include screen('md', 'max') {
+          width: 58px;
+          height: 58px;
+        }
+
+        @include screen('xs', 'max') {
+          width: 50px;
+          height: 50px;
+        }
       }
 
       .category-el-title {
