--- a/app/templates/pages/actions_detail.pug
+++ b/app/templates/pages/actions_detail.pug
@@ -25,7 +25,7 @@ block content
       .pagination
         a.pagination-back.white Новости и акции
       .newsDetail-head
-        h1 Завод стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+        h1.page-title Завод стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
         .newsDetail-box.fixed-base
           .newsDetail-img
             img(src="images/img-newsDetail-1.jpg")
@@ -41,7 +41,7 @@ block content
   section.news
     .content.news-box
       .news-header
-        h2 Другие новости и акции
+        h2.page-title Другие новости и акции
       .news-row
         a.news-item.small-item(href="news_detail.html")
           .news-item-image
