--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -71,7 +71,7 @@ block content
   section.news
     .content.news-box
       .news-header
-        h2 Новости
+        h2.page-title Новости
         +link('Все новости', './news_list.html', 'true')
       .news-row
         a.news-item(style="--color_rect: #FFF3D6" 
