--- a/app/templates/pages/news_detail.pug
+++ b/app/templates/pages/news_detail.pug
@@ -20,12 +20,12 @@ block variables
 
 block content
   +header()
-  section.main-news.waveSection-bottom(data-color="#F6F5F3")
-    .content.news-box
+  section.page-section.waveSection-bottom(data-color="#F6F5F3")
+    .content
       .pagination
         a.pagination-back.white Новости и акции
       .newsDetail-head
-        h1 Завод стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
+        h1.page-title Завод стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
         .newsDetail-box.fixed-base
           .newsDetail-img
             img(src="images/img-newsDetail-1.jpg")
@@ -38,7 +38,7 @@ block content
   section.news
     .content.news-box
       .news-header
-        h2 Другие новости и акции
+        h2.page-title Другие новости и акции
       .news-row
         a.news-item.small-item(href="news_detail.html")
           .news-item-image
