--- a/app/templates/pages/news_list.pug
+++ b/app/templates/pages/news_list.pug
@@ -9,10 +9,10 @@ block variables
 
 block content
   +header()
-  section.main-news.bg-additional
-    .content.news-box
+  section.page-section.bg-additional
+    .content
       .news-header
-        h1 Новости и Акции
+        h1.page-title Новости и Акции
       .news-row
         a.news-item(style="--color_rect: #FFF3D6" 
           href="news_list.html")
