--- a/app/scss/base/svgSprite.scss
+++ b/app/scss/base/svgSprite.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     background-image: url("../images/sprite.svg");
     background-repeat: no-repeat;
-    background-size: 40.3em 282.3em;
+    background-size: 40.3em 335.2em;
 }
 
 .no-svg .svg-icon:before {
@@ -89,8 +89,26 @@
 
 
 
-  .svg-icon.svg-cloud-1:before {
+  .svg-icon.svg-circle-line-color:before {
       background-position: 0em -45.2em;
+      width: 4.4em;
+      height: 4.4em;
+  }
+
+
+
+
+  .svg-icon.svg-clock-color:before {
+      background-position: 0em -49.6em;
+      width: 4.4em;
+      height: 4.4em;
+  }
+
+
+
+
+  .svg-icon.svg-cloud-1:before {
+      background-position: 0em -54em;
       width: 12.3em;
       height: 2.5em;
   }
@@ -99,7 +117,7 @@
 
 
   .svg-icon.svg-cloud-2:before {
-      background-position: 0em -47.7em;
+      background-position: 0em -56.5em;
       width: 9.9em;
       height: 5.4em;
   }
@@ -108,7 +126,7 @@
 
 
   .svg-icon.svg-cloud-3:before {
-      background-position: 0em -53.1em;
+      background-position: 0em -61.9em;
       width: 19em;
       height: 7.8em;
   }
@@ -116,8 +134,35 @@
 
 
 
+  .svg-icon.svg-curve-gray-1:before {
+      background-position: 0em -69.7em;
+      width: 8.2em;
+      height: 5.9em;
+  }
+
+
+
+
+  .svg-icon.svg-curve-gray-2:before {
+      background-position: 0em -75.6em;
+      width: 7.9em;
+      height: 5.2em;
+  }
+
+
+
+
+  .svg-icon.svg-curve-gray-3:before {
+      background-position: 0em -80.8em;
+      width: 8.4em;
+      height: 6.7em;
+  }
+
+
+
+
   .svg-icon.svg-facebook:before {
-      background-position: 0em -60.9em;
+      background-position: 0em -87.5em;
       width: 1.1em;
       height: 2.3em;
   }
@@ -125,8 +170,62 @@
 
 
 
+  .svg-icon.svg-gray-fb:before {
+      background-position: 0em -89.8em;
+      width: 2em;
+      height: 4.4em;
+  }
+
+
+
+
+  .svg-icon.svg-gray-inst:before {
+      background-position: 0em -94.2em;
+      width: 3.9em;
+      height: 3.9em;
+  }
+
+
+
+
+  .svg-icon.svg-gray-ok:before {
+      background-position: 0em -98.1em;
+      width: 2.5em;
+      height: 4.2em;
+  }
+
+
+
+
+  .svg-icon.svg-gray-tw:before {
+      background-position: 0em -102.3em;
+      width: 4.1em;
+      height: 3.5em;
+  }
+
+
+
+
+  .svg-icon.svg-gray-vk:before {
+      background-position: 0em -105.8em;
+      width: 5em;
+      height: 2.7em;
+  }
+
+
+
+
+  .svg-icon.svg-gray-wp:before {
+      background-position: 0em -108.5em;
+      width: 5.2em;
+      height: 3.2em;
+  }
+
+
+
+
   .svg-icon.svg-img-catalog-product-1:before {
-      background-position: 0em -63.2em;
+      background-position: 0em -111.7em;
       width: 8em;
       height: 8.1em;
   }
@@ -135,7 +234,7 @@
 
 
   .svg-icon.svg-img-catalog-product-2:before {
-      background-position: 0em -71.3em;
+      background-position: 0em -119.8em;
       width: 6.3em;
       height: 5.4em;
   }
@@ -144,7 +243,7 @@
 
 
   .svg-icon.svg-img-catalog-product-4:before {
-      background-position: 0em -76.7em;
+      background-position: 0em -125.2em;
       width: 5.1em;
       height: 5em;
   }
@@ -153,7 +252,7 @@
 
 
   .svg-icon.svg-instagram:before {
-      background-position: 0em -81.7em;
+      background-position: 0em -130.2em;
       width: 1.8em;
       height: 1.8em;
   }
@@ -161,8 +260,17 @@
 
 
 
+  .svg-icon.svg-location-color:before {
+      background-position: 0em -132em;
+      width: 3.6em;
+      height: 4.4em;
+  }
+
+
+
+
   .svg-icon.svg-logotype:before {
-      background-position: 0em -83.5em;
+      background-position: 0em -136.4em;
       width: 15.1em;
       height: 9.6em;
   }
@@ -171,7 +279,7 @@
 
 
   .svg-icon.svg-logotype-short:before {
-      background-position: 0em -93.1em;
+      background-position: 0em -146em;
       width: 15.2em;
       height: 4.1em;
   }
@@ -180,7 +288,7 @@
 
 
   .svg-icon.svg-main-link-arrow:before {
-      background-position: 0em -97.2em;
+      background-position: 0em -150.1em;
       width: 1.3em;
       height: 0.8em;
   }
@@ -189,7 +297,7 @@
 
 
   .svg-icon.svg-main-link-plus:before {
-      background-position: 0em -98em;
+      background-position: 0em -150.9em;
       width: 1.2em;
       height: 1.2em;
   }
@@ -198,7 +306,7 @@
 
 
   .svg-icon.svg-navigation:before {
-      background-position: 0em -99.2em;
+      background-position: 0em -152.1em;
       width: 7.9em;
       height: 7.8em;
   }
@@ -207,7 +315,7 @@
 
 
   .svg-icon.svg-ok:before {
-      background-position: 0em -107em;
+      background-position: 0em -159.9em;
       width: 1.4em;
       height: 2.4em;
   }
@@ -216,7 +324,7 @@
 
 
   .svg-icon.svg-pack:before {
-      background-position: 0em -109.4em;
+      background-position: 0em -162.3em;
       width: 40.3em;
       height: 24.2em;
   }
@@ -225,7 +333,7 @@
 
 
   .svg-icon.svg-pan:before {
-      background-position: 0em -133.6em;
+      background-position: 0em -186.5em;
       width: 14.8em;
       height: 6.6em;
   }
@@ -234,7 +342,7 @@
 
 
   .svg-icon.svg-paste:before {
-      background-position: 0em -140.2em;
+      background-position: 0em -193.1em;
       width: 9.5em;
       height: 6.1em;
   }
@@ -243,7 +351,7 @@
 
 
   .svg-icon.svg-presentation:before {
-      background-position: 0em -146.3em;
+      background-position: 0em -199.2em;
       width: 7.8em;
       height: 9.8em;
   }
@@ -252,7 +360,7 @@
 
 
   .svg-icon.svg-prevslogo:before {
-      background-position: 0em -156.1em;
+      background-position: 0em -209em;
       width: 24.2em;
       height: 24.3em;
   }
@@ -261,7 +369,7 @@
 
 
   .svg-icon.svg-print-main:before {
-      background-position: 0em -180.4em;
+      background-position: 0em -233.3em;
       width: 16.1em;
       height: 16.1em;
   }
@@ -270,7 +378,7 @@
 
 
   .svg-icon.svg-print-product:before {
-      background-position: 0em -196.5em;
+      background-position: 0em -249.4em;
       width: 19.4em;
       height: 19.4em;
   }
@@ -279,7 +387,7 @@
 
 
   .svg-icon.svg-promo-box-top-text:before {
-      background-position: 0em -215.9em;
+      background-position: 0em -268.8em;
       width: 23.2em;
       height: 13.4em;
   }
@@ -288,7 +396,7 @@
 
 
   .svg-icon.svg-rhombus:before {
-      background-position: 0em -229.3em;
+      background-position: 0em -282.2em;
       width: 13.6em;
       height: 13.4em;
   }
@@ -297,7 +405,7 @@
 
 
   .svg-icon.svg-salad:before {
-      background-position: 0em -242.7em;
+      background-position: 0em -295.6em;
       width: 9.6em;
       height: 7.9em;
   }
@@ -306,7 +414,7 @@
 
 
   .svg-icon.svg-shawarma:before {
-      background-position: 0em -250.6em;
+      background-position: 0em -303.5em;
       width: 9.6em;
       height: 5.3em;
   }
@@ -315,7 +423,7 @@
 
 
   .svg-icon.svg-statistics:before {
-      background-position: 0em -255.9em;
+      background-position: 0em -308.8em;
       width: 10.3em;
       height: 7em;
   }
@@ -324,7 +432,7 @@
 
 
   .svg-icon.svg-timer:before {
-      background-position: 0em -262.9em;
+      background-position: 0em -315.8em;
       width: 3.3em;
       height: 3.3em;
   }
@@ -333,7 +441,7 @@
 
 
   .svg-icon.svg-twitter:before {
-      background-position: 0em -266.2em;
+      background-position: 0em -319.1em;
       width: 2em;
       height: 1.8em;
   }
@@ -342,7 +450,7 @@
 
 
   .svg-icon.svg-vk:before {
-      background-position: 0em -268em;
+      background-position: 0em -320.9em;
       width: 2.6em;
       height: 1.6em;
   }
@@ -351,7 +459,7 @@
 
 
   .svg-icon.svg-vote:before {
-      background-position: 0em -269.6em;
+      background-position: 0em -322.5em;
       width: 12.1em;
       height: 11em;
   }
@@ -360,7 +468,7 @@
 
 
   .svg-icon.svg-wikipedia:before {
-      background-position: 0em -280.6em;
+      background-position: 0em -333.5em;
       width: 2.8em;
       height: 1.7em;
   }
