--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -16,6 +16,7 @@
 @import "modules/main-partners";
 @import "modules/header";
 @import "modules/animations";
+@import "modules/main-recept";
 
 @import 'components/main';
 
