--- a/app/scss/components/forms/subscribe.scss
+++ b/app/scss/components/forms/subscribe.scss
@@ -7,8 +7,17 @@
     left: 50%;
     transform: translateX(-50%);
     height: 17px;
-    background-image: url('../images/marquee-background.svg');
+    background-image: url("../images/marquee-background.svg");
     background-repeat: repeat-x;
+    animation: subscription-text-move 3s linear infinite;
+    @keyframes subscription-text-move {
+      0% {
+        background-position-x: 427px;
+      }
+      100% {
+        background-position-x: 0px;
+      }
+    }
   }
 
   &-form {
@@ -19,7 +28,7 @@
     flex-wrap: wrap;
     color: $color-text-main;
 
-    @include screen('sm', 'max') {
+    @include screen("sm", "max") {
       flex-direction: column;
       align-items: flex-start;
       padding-bottom: 40px;
@@ -30,7 +39,7 @@
       margin-bottom: 40px;
       @include UI-Font-PFRegalTextPro-bold;
 
-      @include screen('sm', 'max') { 
+      @include screen("sm", "max") {
         width: 100%;
       }
     }
@@ -39,7 +48,7 @@
       width: 40%;
       margin-bottom: 0px;
 
-      @include screen('sm', 'max') {
+      @include screen("sm", "max") {
         width: 100%;
       }
     }
