--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -35,7 +35,7 @@ block content
     .content.main-index-box
       .main-index-box-slider
         .swiper-wrapper
-          +main-slider(getData('mainSlider'))
+          +main-slider(getData('sliders/main'))
     .main-index-box-control
       .main-index-box-control-arrows.main-slider-buttons
         +btn-slider('left').bg-white#slider-main-left
