--- a/app/templates/pages/news_list.pug
+++ b/app/templates/pages/news_list.pug
@@ -15,7 +15,7 @@ block content
         h1.page-title Новости и Акции
       .news-row
         a.news-item(style="--color_rect: #FFF3D6" 
-          href="news_list.html")
+          href="./news_detail.html")
           .news-item-image
             img(src="./images/news-background-1.jpg" alt="Новость 1")
           .news-content
@@ -23,7 +23,7 @@ block content
             .news-time 25.05. 
               span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(href="./news_list.html")
+        a.news-item(href="./news_detail.html")
           .news-content
             .news-type Акция
             .news-time 
@@ -32,7 +32,7 @@ block content
               span по 
               |12.04.2020
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(href="./news_list.html")
+        a.news-item(href="./news_detail.html")
           .news-content
             .news-type Акция
             .news-time
@@ -41,38 +41,38 @@ block content
               span по 
               |12.04.2020
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(href="./news_list.html")
+        a.news-item(href="./news_detail.html")
           .news-content
             .news-type Новость
             .news-time 25.05. 
               span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(href="./news_list.html")
+        a.news-item(href="./news_detail.html")
           .news-content
             .news-type Новость
             .news-time 25.05. 
               span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(href="./news_list.html")
+        a.news-item(href="./news_detail.html")
           .news-content
             .news-type Новость
             .news-time 25.05. 
               span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(href="./news_list.html")
+        a.news-item(href="./news_detail.html")
           .news-content
             .news-type Новость
             .news-time 25.05. 
               span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(href="./news_list.html")
+        a.news-item(href="./news_detail.html")
           .news-content
             .news-type Новость
             .news-time 25.05. 
               span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
         a.news-item(style="--color_rect: #E6FAE1"
-          href="./news_list.html")
+          href="./news_detail.html")
           .news-item-image
             img(src="./images/news-background-2.jpg" alt="Новость 1")
           .news-content
