--- a/app/templates/pages/recept_list.pug
+++ b/app/templates/pages/recept_list.pug
@@ -17,33 +17,33 @@ mixin recept-slider(json)
           +icon('timer', 'svg')
 
 block content
-    +header()
-    section.main-recept 
-      .content.main-recept-box
-        .recept-header
-          h2 Рецепты
-        .recept-wrapper
-          .text-left Рецепты
-          .recept-wrapper-content
-            +recept-slider(getData('sliders/recepts'))
-          form.recept-wrapper-list
-            .list-group
-              .list-group-title Категория:
-              .list-group-selection
-                +checkbox('all', 'all', 'Все')
-                +checkbox('snacks', 'snacks', 'Закуски')
-                +checkbox('salads', 'salads', 'Салаты')
-                +checkbox('backing', 'backing', 'Выпечка')
-                +checkbox('hot', 'hot', 'Горячие блюда')
-            .list-group
-              .list-group-title Продукт:
-              .list-group-selection
-                +checkbox('1', '1', 'Сыр «Косичка» «Гиагинский» копченый')
-                +checkbox('2', '2', 'Сыр «Косичка» «Гиагинский»')
-                +checkbox('3', '3', 'Сыр «Охотничий» «Гиагинский» копченый')
-                +checkbox('4', '4', 'Сыр «Спагетти» «Гиагинский» копченый')
-                +checkbox('5', '5', 'Сыр «Спагетти» «Гиагинский»')
-                button.display-full Показать все 
-            button.clear Сбросить фильтр
-    +subscription().bg-additional
-    +footer().bg-additional
+  +header()
+  section.main-recepts 
+    .content.main-recepts-box
+      .recepts-header
+        h2 Рецепты
+      .recepts-wrapper
+        .text-left Рецепты
+        .recepts-wrapper-content
+          +recept-slider(getData('sliders/recepts'))
+        form.recepts-wrapper-list
+          .list-group
+            .list-group-title Категория:
+            .list-group-selection
+              +checkbox('all', 'all', 'Все')
+              +checkbox('snacks', 'snacks', 'Закуски')
+              +checkbox('salads', 'salads', 'Салаты')
+              +checkbox('backing', 'backing', 'Выпечка')
+              +checkbox('hot', 'hot', 'Горячие блюда')
+          .list-group
+            .list-group-title Продукт:
+            .list-group-selection
+              +checkbox('1', '1', 'Сыр «Косичка» «Гиагинский» копченый')
+              +checkbox('2', '2', 'Сыр «Косичка» «Гиагинский»')
+              +checkbox('3', '3', 'Сыр «Охотничий» «Гиагинский» копченый')
+              +checkbox('4', '4', 'Сыр «Спагетти» «Гиагинский» копченый')
+              +checkbox('5', '5', 'Сыр «Спагетти» «Гиагинский»')
+              button.display-full Показать все 
+          button.clear Сбросить фильтр
+  +subscription().bg-additional
+  +footer().bg-additional
