--- a/app/scss/base/svgSprite.scss
+++ b/app/scss/base/svgSprite.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     background-image: url("../images/sprite.svg");
     background-repeat: no-repeat;
-    background-size: 40.3em 335.2em;
+    background-size: 40.3em 353.2em;
 }
 
 .no-svg .svg-icon:before {
@@ -134,8 +134,26 @@
 
 
 
-  .svg-icon.svg-curve-gray-1:before {
+  .svg-icon.svg-cooking-servings:before {
       background-position: 0em -69.7em;
+      width: 4.1em;
+      height: 3.4em;
+  }
+
+
+
+
+  .svg-icon.svg-cooking-time:before {
+      background-position: 0em -73.1em;
+      width: 3.4em;
+      height: 3.4em;
+  }
+
+
+
+
+  .svg-icon.svg-curve-gray-1:before {
+      background-position: 0em -76.5em;
       width: 8.2em;
       height: 5.9em;
   }
@@ -144,7 +162,7 @@
 
 
   .svg-icon.svg-curve-gray-2:before {
-      background-position: 0em -75.6em;
+      background-position: 0em -82.4em;
       width: 7.9em;
       height: 5.2em;
   }
@@ -153,7 +171,7 @@
 
 
   .svg-icon.svg-curve-gray-3:before {
-      background-position: 0em -80.8em;
+      background-position: 0em -87.6em;
       width: 8.4em;
       height: 6.7em;
   }
@@ -162,7 +180,7 @@
 
 
   .svg-icon.svg-facebook:before {
-      background-position: 0em -87.5em;
+      background-position: 0em -94.3em;
       width: 1.1em;
       height: 2.3em;
   }
@@ -171,7 +189,7 @@
 
 
   .svg-icon.svg-gray-fb:before {
-      background-position: 0em -89.8em;
+      background-position: 0em -96.6em;
       width: 2em;
       height: 4.4em;
   }
@@ -180,7 +198,7 @@
 
 
   .svg-icon.svg-gray-inst:before {
-      background-position: 0em -94.2em;
+      background-position: 0em -101em;
       width: 3.9em;
       height: 3.9em;
   }
@@ -189,7 +207,7 @@
 
 
   .svg-icon.svg-gray-ok:before {
-      background-position: 0em -98.1em;
+      background-position: 0em -104.9em;
       width: 2.5em;
       height: 4.2em;
   }
@@ -198,7 +216,7 @@
 
 
   .svg-icon.svg-gray-tw:before {
-      background-position: 0em -102.3em;
+      background-position: 0em -109.1em;
       width: 4.1em;
       height: 3.5em;
   }
@@ -207,7 +225,7 @@
 
 
   .svg-icon.svg-gray-vk:before {
-      background-position: 0em -105.8em;
+      background-position: 0em -112.6em;
       width: 5em;
       height: 2.7em;
   }
@@ -216,7 +234,7 @@
 
 
   .svg-icon.svg-gray-wp:before {
-      background-position: 0em -108.5em;
+      background-position: 0em -115.3em;
       width: 5.2em;
       height: 3.2em;
   }
@@ -225,7 +243,7 @@
 
 
   .svg-icon.svg-img-catalog-product-1:before {
-      background-position: 0em -111.7em;
+      background-position: 0em -118.5em;
       width: 8em;
       height: 8.1em;
   }
@@ -234,7 +252,7 @@
 
 
   .svg-icon.svg-img-catalog-product-2:before {
-      background-position: 0em -119.8em;
+      background-position: 0em -126.6em;
       width: 6.3em;
       height: 5.4em;
   }
@@ -243,7 +261,7 @@
 
 
   .svg-icon.svg-img-catalog-product-4:before {
-      background-position: 0em -125.2em;
+      background-position: 0em -132em;
       width: 5.1em;
       height: 5em;
   }
@@ -252,7 +270,7 @@
 
 
   .svg-icon.svg-instagram:before {
-      background-position: 0em -130.2em;
+      background-position: 0em -137em;
       width: 1.8em;
       height: 1.8em;
   }
@@ -261,7 +279,7 @@
 
 
   .svg-icon.svg-location-color:before {
-      background-position: 0em -132em;
+      background-position: 0em -138.8em;
       width: 3.6em;
       height: 4.4em;
   }
@@ -270,7 +288,7 @@
 
 
   .svg-icon.svg-logotype:before {
-      background-position: 0em -136.4em;
+      background-position: 0em -143.2em;
       width: 15.1em;
       height: 9.6em;
   }
@@ -279,7 +297,7 @@
 
 
   .svg-icon.svg-logotype-short:before {
-      background-position: 0em -146em;
+      background-position: 0em -152.8em;
       width: 15.2em;
       height: 4.1em;
   }
@@ -288,7 +306,7 @@
 
 
   .svg-icon.svg-main-link-arrow:before {
-      background-position: 0em -150.1em;
+      background-position: 0em -156.9em;
       width: 1.3em;
       height: 0.8em;
   }
@@ -297,7 +315,7 @@
 
 
   .svg-icon.svg-main-link-plus:before {
-      background-position: 0em -150.9em;
+      background-position: 0em -157.7em;
       width: 1.2em;
       height: 1.2em;
   }
@@ -306,7 +324,7 @@
 
 
   .svg-icon.svg-navigation:before {
-      background-position: 0em -152.1em;
+      background-position: 0em -158.9em;
       width: 7.9em;
       height: 7.8em;
   }
@@ -315,7 +333,7 @@
 
 
   .svg-icon.svg-ok:before {
-      background-position: 0em -159.9em;
+      background-position: 0em -166.7em;
       width: 1.4em;
       height: 2.4em;
   }
@@ -324,7 +342,7 @@
 
 
   .svg-icon.svg-pack:before {
-      background-position: 0em -162.3em;
+      background-position: 0em -169.1em;
       width: 40.3em;
       height: 24.2em;
   }
@@ -333,7 +351,7 @@
 
 
   .svg-icon.svg-pan:before {
-      background-position: 0em -186.5em;
+      background-position: 0em -193.3em;
       width: 14.8em;
       height: 6.6em;
   }
@@ -342,7 +360,7 @@
 
 
   .svg-icon.svg-paste:before {
-      background-position: 0em -193.1em;
+      background-position: 0em -199.9em;
       width: 9.5em;
       height: 6.1em;
   }
@@ -351,7 +369,7 @@
 
 
   .svg-icon.svg-presentation:before {
-      background-position: 0em -199.2em;
+      background-position: 0em -206em;
       width: 7.8em;
       height: 9.8em;
   }
@@ -360,7 +378,7 @@
 
 
   .svg-icon.svg-prevslogo:before {
-      background-position: 0em -209em;
+      background-position: 0em -215.8em;
       width: 24.2em;
       height: 24.3em;
   }
@@ -369,7 +387,7 @@
 
 
   .svg-icon.svg-print-main:before {
-      background-position: 0em -233.3em;
+      background-position: 0em -240.1em;
       width: 16.1em;
       height: 16.1em;
   }
@@ -378,7 +396,7 @@
 
 
   .svg-icon.svg-print-product:before {
-      background-position: 0em -249.4em;
+      background-position: 0em -256.2em;
       width: 19.4em;
       height: 19.4em;
   }
@@ -387,7 +405,7 @@
 
 
   .svg-icon.svg-promo-box-top-text:before {
-      background-position: 0em -268.8em;
+      background-position: 0em -275.6em;
       width: 23.2em;
       height: 13.4em;
   }
@@ -395,8 +413,17 @@
 
 
 
+  .svg-icon.svg-recept-product-print:before {
+      background-position: 0em -289em;
+      width: 11.5em;
+      height: 11.2em;
+  }
+
+
+
+
   .svg-icon.svg-rhombus:before {
-      background-position: 0em -282.2em;
+      background-position: 0em -300.2em;
       width: 13.6em;
       height: 13.4em;
   }
@@ -405,7 +432,7 @@
 
 
   .svg-icon.svg-salad:before {
-      background-position: 0em -295.6em;
+      background-position: 0em -313.6em;
       width: 9.6em;
       height: 7.9em;
   }
@@ -414,7 +441,7 @@
 
 
   .svg-icon.svg-shawarma:before {
-      background-position: 0em -303.5em;
+      background-position: 0em -321.5em;
       width: 9.6em;
       height: 5.3em;
   }
@@ -423,7 +450,7 @@
 
 
   .svg-icon.svg-statistics:before {
-      background-position: 0em -308.8em;
+      background-position: 0em -326.8em;
       width: 10.3em;
       height: 7em;
   }
@@ -432,7 +459,7 @@
 
 
   .svg-icon.svg-timer:before {
-      background-position: 0em -315.8em;
+      background-position: 0em -333.8em;
       width: 3.3em;
       height: 3.3em;
   }
@@ -441,7 +468,7 @@
 
 
   .svg-icon.svg-twitter:before {
-      background-position: 0em -319.1em;
+      background-position: 0em -337.1em;
       width: 2em;
       height: 1.8em;
   }
@@ -450,7 +477,7 @@
 
 
   .svg-icon.svg-vk:before {
-      background-position: 0em -320.9em;
+      background-position: 0em -338.9em;
       width: 2.6em;
       height: 1.6em;
   }
@@ -459,7 +486,7 @@
 
 
   .svg-icon.svg-vote:before {
-      background-position: 0em -322.5em;
+      background-position: 0em -340.5em;
       width: 12.1em;
       height: 11em;
   }
@@ -468,7 +495,7 @@
 
 
   .svg-icon.svg-wikipedia:before {
-      background-position: 0em -333.5em;
+      background-position: 0em -351.5em;
       width: 2.8em;
       height: 1.7em;
   }
