--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -14,6 +14,7 @@
 @import "modules/about";
 @import "modules/header";
 @import "modules/recepts";
+@import "modules/wherebuy";
 @import "modules/animations";
 
 @import 'components/main';
