--- a/app/templates/pages/recept_detail.pug
+++ b/app/templates/pages/recept_detail.pug
@@ -96,6 +96,6 @@ block content
           .product-print
             +icon('recept-product-print', 'svg')
   +recepts().bg-white
-  +wherebuy().bg-white
+  +wherebuy().bg-white.receptbuy
   +subscription().bg-white
   +footer().bg-white
