--- a/app/templates/pages/contacts.pug
+++ b/app/templates/pages/contacts.pug
@@ -57,6 +57,11 @@ block content
       h2.page-title Мы в социальных сетях
       .contacts-social
         +contacts-social-list(getData('/pages/contacts/social'))
+      .contacts-map#map
+        .map_data
+          input.placeMark(type="hidden"
+            data-cords="61.283240311585,31.132082116528",
+            data-name="1")
 
   +contactUsForm().bg-additional
   +subscription().bg-additional
